--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
   "dependencies": {
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^1.6.0",
     "bulma": "^0.9.4",
     "easy-redux-undo": "^1.0.5",
     "electron-devtools-installer": "^3.2.0",
