--- a/package.json
+++ b/package.json
@@ -78,17 +78,17 @@
     "last 2 Chrome versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "7.23.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "7.22.15",
+    "@babel/preset-env": "7.23.2",
+    "@babel/preset-react": "7.22.15",
+    "@babel/preset-typescript": "7.23.2",
     "@doyensec/electronegativity": "^1.9.1",
     "@google-cloud/translate": "^7.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "9.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -96,44 +96,45 @@
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "csp-html-webpack-plugin": "^5.1.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "electron": "^19.0.10",
-    "electron-builder": "^23.1.0",
+    "css-loader": "6.8.1",
+    "css-minimizer-webpack-plugin": "5.0.1",
+    "electron": "27.0.3",
+    "electron-builder": "24.6.4",
     "electron-debug": "^3.2.0",
-    "html-loader": "^4.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "mocha": "^10.0.0",
+    "html-loader": "4.2.0",
+    "html-webpack-plugin": "5.5.3",
+    "mini-css-extract-plugin": "2.7.6",
+    "mocha": "10.2.0",
     "path-browserify": "^1.0.1",
     "spectron": "^19.0.0",
     "stream-browserify": "^3.0.0",
-    "typescript": "4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
+    "typescript": "5.2.2",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "5.10.0"
   },
   "dependencies": {
     "@loadable/component": "^5.15.2",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@reduxjs/toolkit": "1.9.7",
     "bulma": "^0.9.4",
     "easy-redux-undo": "^1.0.5",
     "electron-devtools-installer": "^3.2.0",
-    "i18next": "^21.8.14",
+    "i18next": "23.6.0",
     "i18next-electron-fs-backend": "^3.0.0",
     "i18next-fs-backend": "^1.1.4",
     "lodash": "4.17.21",
     "lodash.merge": "^4.6.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-admin": "^4.15.3",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.3",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "redux": "^4.2.0",
-    "redux-first-history": "^5.0.12",
+    "react-i18next": "13.3.1",
+    "react-redux": "8.1.3",
+    "react-router": "6.18.0",
+    "react-router-dom": "6.18.0",
+    "redux": "4.2.1",
+    "redux-first-history": "5.1.1",
     "secure-electron-context-menu": "^1.3.3",
     "secure-electron-license-keys": "^1.1.3",
     "secure-electron-store": "^4.0.2"
